# fastapi-project-tut

./: .env  prometheus.yml  pyproject.toml
devops/: azure-build-pipeline.yaml  quality.yaml  sonar-project.properties
fastapi_project_tut/: main.py
fastapi_project_tut/core/: main.py
